工时管理软件git项目，完成下拉刷新diaspatchlist列表的功能

--- a/app/src/main/res/layout/fragment_compdisplist.xml
+++ b/app/src/main/res/layout/fragment_compdisplist.xml
@@ -5,9 +5,16 @@
     tools:context="com.shg.manhourapp.fragment.CompDispListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ListView
-    android:id="@+id/lv_comp_dispatchlistview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_comp_dropRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lv_comp_dispatchlistview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </FrameLayout>
