--- a/app/src/main/res/layout/fragment_uncompdisplist.xml
+++ b/app/src/main/res/layout/fragment_uncompdisplist.xml
@@ -5,9 +5,17 @@
     tools:context="com.shg.manhourapp.fragment.UnCompDispListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ListView
-        android:id="@+id/lv_uncomp_dispatchlistview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_uncomp_dropRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lv_uncomp_dispatchlistview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </FrameLayout>
