工时管理软件git项目，设置完成界面根据时间选择item布局

--- a/app/src/main/res/layout/fragment_compdisplist.xml
+++ b/app/src/main/res/layout/fragment_compdisplist.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +14,19 @@
             android:id="@+id/lv_comp_dispatchlistview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="120dp"
+        android:layout_marginRight="20dp"
+        android:src="@android:drawable/ic_dialog_email" />
 
-</FrameLayout>
+
+</RelativeLayout>
