工时管理软件git项目，完成时间选择筛选界面的设计和实现，部分UI进行了优化

--- a/app/src/main/res/layout/fragment_datepicker.xml
+++ b/app/src/main/res/layout/fragment_datepicker.xml
@@ -6,6 +6,7 @@
     <DatePicker
         android:id="@+id/dp_datepicker"
         android:layout_width="match_parent"
+        android:theme="@android:style/Theme.Holo.Light"
         android:layout_height="match_parent"
         android:calendarViewShown="false"
         android:elevation="0dp">
