--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,21 +33,44 @@
         android:id="@+id/et_login_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_below="@id/iv_login_logo"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="30dp"
         android:hint="请输入用户名"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:padding="5dp" />
 
     <EditText
         android:id="@+id/et_login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/et_login_username"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:hint="请输入密码"
         android:inputType="textPassword"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:padding="5dp" />
+
+    <LinearLayout
+        android:id="@+id/ll_login_checkItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_login_password"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/cb_login_auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="自动登录" />
+
+        <CheckBox
+            android:id="@+id/cb_login_remb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="记住密码" />
+
+    </LinearLayout>
+
+
 </RelativeLayout>
