--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,12 +61,14 @@
         <CheckBox
             android:id="@+id/cb_login_auto"
             android:layout_width="wrap_content"
+            android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:text="自动登录" />
 
         <CheckBox
             android:id="@+id/cb_login_remb"
             android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_height="wrap_content"
             android:text="记住密码" />
 
