工时管理软件git项目，完成工时管理软件手机端APP手机图标以及部分应用内图片和文字颜色和素材的优化

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_login_in"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ship_128px" />
+        android:src="@drawable/working_hour_128px" />
 
     <EditText
         android:id="@+id/et_login_username"
