工时管理软件git项目，完成工时管理软件手机端APP欢迎界面倒计时背景和登陆界面登陆按键背景的优化

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_margin="20dp"
-        android:background="#3399ff"
+        android:background="@drawable/shape_roundedcorner_login"
         android:clickable="true"
         android:padding="5dp"
         android:text="登陆"
