--- a/app/src/main/res/layout/content_dispatchlist.xml
+++ b/app/src/main/res/layout/content_dispatchlist.xml
@@ -18,6 +18,7 @@
     </FrameLayout>
 
     <RadioGroup
+        android:paddingTop="5dp"
         android:id="@+id/rg_main_check"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
