--- a/app/src/main/res/layout/fragment_datepicker.xml
+++ b/app/src/main/res/layout/fragment_datepicker.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_divide_line" />
+
     <DatePicker
         android:id="@+id/dp_datepicker"
         android:layout_width="match_parent"
-        android:theme="@android:style/Theme.Holo.Light"
         android:layout_height="match_parent"
         android:calendarViewShown="false"
-        android:elevation="0dp">
+        android:elevation="0dp"
+        android:theme="@android:style/Theme.Holo.Light">
 
     </DatePicker>
 
