--- a/app/src/main/res/layout/fragment_choosedate.xml
+++ b/app/src/main/res/layout/fragment_choosedate.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_divide_line" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/shape_divide_line" />-->
 
     <TextView
 
