--- a/app/src/main/res/layout/fragment_datepicker.xml
+++ b/app/src/main/res/layout/fragment_datepicker.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_divide_line" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/shape_divide_line" />-->
 
     <DatePicker
         android:id="@+id/dp_datepicker"
