工时管理软件git项目，完成派工单异常信息的提醒通知，

--- a/app/src/main/res/layout/dispatch_listview_item.xml
+++ b/app/src/main/res/layout/dispatch_listview_item.xml
@@ -92,6 +92,10 @@
                 android:textColor="#000000" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_dispatchList_dispatchException"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
