--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -15,17 +15,26 @@
         <TextView
             android:id="@+id/tv_uncompItemDetail_startTime"
             android:layout_width="match_parent"
+            android:background="#363636"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_uncompItemDetail_endTime"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
+            android:background="#363636"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_uncompItemDetail_manHourActualTimes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/et_uncompItemDetail_remark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请填写备注信息" />
 
     </LinearLayout>
 
@@ -51,27 +60,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/tv_compItemDetail_remark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/et_uncompItemDetail_ManHourActual"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="请输入实际工时数值"
-        android:inputType="number"
-        android:visibility="gone" />
-
-    <TextView
-
-        android:id="@+id/tv_compItemDetail_ManHourActual"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:paddingLeft="15dp"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:visibility="gone" />
 
 
 </LinearLayout>
