工时管理软件git项目，运用fragmentdialog和viepager重构全新的实动工时上报dialog，完成基本UI运行测试和功能界面

--- a/app/src/main/res/layout/fragment_remark.xml
+++ b/app/src/main/res/layout/fragment_remark.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
-            android:text="请选择日期"
+            android:text="请填写备注"
             android:textColor="@android:color/holo_red_light"
             android:textSize="20dp" />
 
