--- a/app/src/main/res/layout/fragment_updateinfo.xml
+++ b/app/src/main/res/layout/fragment_updateinfo.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/bt_updateinfo_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="下一步" />
@@ -26,24 +27,23 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_updateinfo_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/green_pot" />
 
         <ImageView
+            android:id="@+id/iv_updateinfo_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/green_pot" />
 
         <ImageView
+            android:id="@+id/iv_updateinfo_remark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/green_pot" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/green_pot" />
     </LinearLayout>
 
     <LinearLayout
