工时管理软件git项目，修改物量实体类数据类型，修改派工单项预览dialog中的控件类型

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -15,26 +15,25 @@
         <TextView
             android:id="@+id/tv_uncompItemDetail_startTime"
             android:layout_width="match_parent"
-            android:background="#363636"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="#363636" />
 
         <TextView
             android:id="@+id/tv_uncompItemDetail_endTime"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:background="#363636"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="#363636" />
 
         <TextView
             android:id="@+id/tv_uncompItemDetail_manHourActualTimes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/et_uncompItemDetail_remark"
+        <TextView
+            android:id="@+id/tv_uncompItemDetail_remark"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请填写备注信息" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
