工时管理软件git项目，完成开始时间和结束时间的显示，完成有结束时间和实动工时来计算开始时间

--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/shape_divide_line" />
 
     <DatePicker
+        android:id="@+id/dp_choosedate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
