工时管理软件git项目，完成开始时间和结束时间和查询的数据库中相应数据的关联，完成相应的显示UI

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:background="#66ffcc"
             android:padding="5dp"
+            android:drawableLeft="@drawable/s_24px"
             android:text="开始时间"
             android:textSize="20sp" />
 
@@ -28,6 +29,7 @@
             android:layout_marginTop="10dp"
             android:background="#66ffcc"
             android:padding="5dp"
+            android:drawableLeft="@drawable/e_24px"
             android:text="结束时间"
             android:textSize="20sp" />
 
