--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -74,6 +74,7 @@
         <TextView
             android:id="@+id/tv_compItemDetail_manHourActualTimes"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:textSize="20sp" />
 
