工时管理软件git项目，修改完成工时列表和未完成工时列表的显示问题，优化提交成功和失败是的提醒功能

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -59,7 +59,11 @@
         <TextView
             android:id="@+id/tv_compItemDetail_startTime"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="#66ffcc"
+            android:drawableLeft="@drawable/s_24px"
+            android:padding="5dp"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_compItemDetail_endTime"
@@ -74,8 +78,8 @@
         <TextView
             android:id="@+id/tv_compItemDetail_manHourActualTimes"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:textSize="20sp" />
 
         <TextView
